fixed uneven header heights

--- a/client/src/app/deck/layout/deck-main.module.scss
+++ b/client/src/app/deck/layout/deck-main.module.scss
@@ -16,7 +16,7 @@
 	// flex-wrap: wrap;
 	align-items: center;
 	justify-content: flex-start;
-	min-height: 3rem;
+	height: 3rem;
 	/* background-color: #373737; */
 	background-color: var(--gray-700);
 	gap: 0.5rem;
