--- a/client/src/components/button/button.module.scss
+++ b/client/src/components/button/button.module.scss
@@ -110,7 +110,6 @@
 
 .medium {
 	height: 2.75rem;
-	font-size: 3rem;
 }
 
 .large {
